cfdsa-master/Day3/bgg/bgg-db-deploy_v2.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
   name: bgg-db-deployment
   namespace: workshop02

spec:
   replicas: 1
   selector:
      matchLabels:
         app.kubernetes.io/name: bgg-db-pod

   template:
      metadata:
         name: bgg-db-pod
         labels:
            app.kubernetes.io/name: bgg-db-pod
            app.kubernetes.io/version: "v1"

      spec:
         volumes:
            - name: dbvol
              persistentVolumeClaim:
                 claimName: bggdbpvc
         containers:
            - name: bgg-db-container
              image: stackupiss/bgg-db:v1
              imagePullPolicy: Always
              ports:
              - name: mysql-port
                containerPort: 3306
              volumeMounts:
                - mountPath: /var/lib/mysql
                  name: dbvol

---

apiVersion: v1
kind: Service

metadata:
   name: bgg-db-svc
   namespace: workshop02
   labels:
      name: bgg-db-svc

spec:
   type: ClusterIP
   selector:
      app.kubernetes.io/name: bgg-db-pod
   ports:
   - name: mysql-port-svc
     port: 3306
     targetPort: mysql-port
