cfdsa-master/Day3/bgg/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: bggapping
  namespace: workshop02
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: “false”

spec:
  backend:
    serviceName: bgg-app-svc-v2
    servicePort: 8080
  rules:
    - http:
        paths:
        - path: /v1
          backend:
            serviceName: bgg-app-svc-v1
            servicePort: 80
        - path: /v2
          backend:
            serviceName: bgg-app-svc-v2
            servicePort: 8080
        - path: /
          backend:
            serviceName: bgg-app-svc-v2
            servicePort: 8080
